--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,12 +1,12 @@
 body {
-  background-color: #9AC791 
+  background-color: #9ac791;
 }
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
+    Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
@@ -16,4 +16,29 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: rgb(19, 63, 21);
+  flex-direction: column;
+  justify-content: center;
+  padding: 0 0.5rem;
+  vertical-align: top;
+  position: fixed;
+  top: 0;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: rgb(250, 185, 234);
+  text-align: center;
+  padding: 14px 16px;
 }
